--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Todos</string>
+    <string name="partial_app_name_1">Todos</string>
+    <string name="app_name_partial_2">App</string>
+    <string name="start">Start</string>
 </resources>
