--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,11 +6,12 @@
     <string name="login_tab">LOGIN</string>
     <string name="signup_tab">SIGN-UP</string>
     <string name="login">GO!</string>
-    <string name="signup">Sign-up</string>
+    <string name="signup">GET STARTED!</string>
     <string name="email">Email</string>
     <string name="hint_email">example@gmail.com</string>
     <string name="username">Username</string>
     <string name="hint_username">username1234</string>
     <string name="password">Password</string>
+    <string name="confirm_password">Confirm Password</string>
     <string name="hint_password">********</string>
 </resources>
