Create edit-item activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,5 +24,8 @@
     <string name="hint_todo_name">Enter todo name here</string>
     <string name="hint_edit_todo_name">Edit todo name here</string>
     <string name="add_item">Add Item</string>
+    <string name="edit_item">Edit Item</string>
     <string name="hint_item_name">Enter item name here</string>
+    <string name="hint_edit_item_name">Edit item name here</string>
+    <string name="done">Done?</string>
 </resources>
