Add delete functionality

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
     <string name="add_text">Add</string>
     <string name="edit_todo">Edit Todo</string>
     <string name="edit_text">Edit</string>
+    <string name="delete_text">Delete</string>
     <string name="cancel_text">Cancel</string>
     <string name="important">Important?</string>
     <string name="hint_todo_name">Enter todo name here</string>
