--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Todos</string>
     <string name="partial_app_name_1">Todos</string>
     <string name="app_name_partial_2">App</string>
-    <string name="start">Start</string>
+    <string name="start">Touch to Start</string>
     <string name="login_tab">LOGIN</string>
     <string name="signup_tab">SIGN-UP</string>
     <string name="login">GO!</string>
